# aichat

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-lint.yml
aichat/: _main.py  agent_config.py  config.py  db.py  main.py  messages.py  roles.py  state.py  tables.py  topics.py
aichat/agents/: __init__.py  agent.py  claude_agent.py  deepseek_agent.py  dummy_agent.py  gemini_agent.py  gemma_agent.py  local_agent.py  mcp_handler.py  mlx_model_agent.py  openai_agent.py  servers.json.sample
aichat/agents/mcp_tools/: __init__.py  mcp_buffer.py  mcp_handler.py  servers.json.sample
aichat/agents/mcp_tools/servers/: date.py
aichat/components/: chat_space.py  left_side_bar.py
aichat/controllers/: chat_display_controller.py  left_side_bar_controller.py  message_input_controller.py
aichat/database/: db.py
aichat/models/: chat.py  message.py  model.py  role.py
aichat/utils/: state_store.py
aichat/views/: chat_display_area.py  left_side_bar_area.py  message_input_area.py
sqls/: chat.sql  message.sql
