[tool.poetry]
name = "aichat"
version = "0.1.0"
description = ""
authors = ["Yudai Hayashi <yudai@wantedly.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flet = "^0.25.2"
openai = "^1.59.8"
pdfplumber = "^0.11.5"
pydantic = "^2.10.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
flake8 = "^7.1.1"
black = "^24.10.0"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
