[project]
name = "aichat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet[all]>=0.26.0",
    "flet-cli>=0.26.0",
    "google-generativeai>=0.8.4",
    "loguru>=0.7.3",
    "openai>=1.66.0",
    "pdfplumber>=0.11.5",
    "pydantic>=2.10.6",
    "anthropic>=0.49.0",
    "mistralai>=1.5.1",
]
