[project]
name = "aichat"
version = "0.7.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet[all]>=0.26.0",
    "flet-cli>=0.26.0",
    "loguru>=0.7.3",
    "openai>=1.66.0",
    "pdfplumber>=0.11.5",
    "pydantic>=2.10.6",
    "anthropic>=0.49.0",
    "mistralai>=1.5.1",
    "torch>=2.6.0",
    "transformers>=4.50.2",
    "google-genai>=1.8.0",
    "mlx>=0.24.2",
    "mlx-lm>=0.22.3",
    "mcp[cli]>=1.6.0",
]
